# logitect-m7-20-key-remaper-linux

./: README.md  install.sh  m720-remapper.desktop  m720_button_remapper_safe.py  manage_m720_manual.sh  start_m720_remapper.sh
benchmarks/: benchmark.py  benchmark_results.json
kernel-module/: README.md
kernel-module/c-implementation/: Makefile  dkms.conf  install.sh  m720_remapper.c  m720_remapper.h
kernel-module/hybrid-approach/: README.md
kernel-module/rust-implementation/: Cargo.toml  README.md
kernel-module/rust-implementation/src/: lib.rs
